<resources>
    <string name="app_name">Module 3 Project</string>
    <!--Login Screen-->
    <string name="edit_username">Enter Username</string>
    <string name="edit_password">Enter Password</string>
    <string name="btnLogin">Login</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_signup">Don\'t have an account? Sign up now</string>

    <!--Registration Screen-->
    <string name="txt_register">Register Yourself</string>
    <string name="edit_name">Name: (Min. 3 characters)</string>
    <string name="edit_email">Email Address</string>
    <string name="edit_mobile">Mobile Number (10 digits)</string>
    <string name="edit_address">Delivery Address</string>
    <string name="edit_reg_password">Password (Min. 4 characters)</string>
    <string name="edit_conf_password">Confirm Password</string>
    <string name="btn_register">Register</string>

    <!--Forgot Password Screen-->
    <string name="txt_forgot_password_title">Enter your registered mobile number and email below:</string>
    <string name="btn_next">Next</string>
    <string name="desc_company_logo">Company Logo</string>
    <string name="details_title">Entered Details</string>
</resources>