<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_primary">

    <Button
        android:id="@+id/header_LHS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/header_RHS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_register"
        android:textSize="26sp"
        android:layout_marginStart="40dp"
        android:layout_toEndOf="@id/header_LHS"
        android:layout_margin="5dp"
        />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_name"
        android:layout_below="@id/header_LHS"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_email"
        android:layout_below="@id/edit_name"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/edit_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_mobile"
        android:layout_below="@id/edit_email"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/edit_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_address"
        android:layout_below="@+id/edit_mobile"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/edit_reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_password"
        android:layout_below="@+id/edit_address"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/edit_conf_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_conf_password"
        android:layout_below="@id/edit_reg_password"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:padding="10dp"
        />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_conf_password"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"

        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/btn_register"
        android:textColorHint="@color/white"
        app:cornerRadius="0dp" />

</RelativeLayout>