<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_primary">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/img_company_logo"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:contentDescription="@string/desc_company_logo"
        />

    <EditText
        android:id="@+id/edit_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_mobile"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_email"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:padding="10dp"
        />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/btn_next"
        android:textColorHint="@color/white"
        app:cornerRadius="0dp" />


</LinearLayout>